--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "localhost": "nodemon src/app.js",
+    "start": "nodemon --max_old_space_size=4096  src/app.js",
+    "localhost": "dotenv -e .env.localhost npm -- start",
     "develop": "nodemon src/app.js"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "@koa/router": "^13.1.0",
     "argon2": "^0.43.0",
     "dotenv": "^16.5.0",
+    "dotenv-cli": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^3.0.0",
     "koa-bodyparser": "^4.4.1",
